
syntax = "proto3";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/field_behavior.proto";

// A simple Jobs API.
//
// The API manages jobs and companies resources. companies contain jobs.
service Jobs {

    // List the companies
    rpc ListCompanies(ListCompaniesRequest) returns (ListCompaniesResponse) {
        // curl http://DOMAIN_NAME/v1/companies
        option (google.api.http) = {
            get: "/v1/companies"
        };
    }

    // Creates a new book.
    rpc CreateCompany(CreateCompanyRequest) returns (Company) {
        option (google.api.http) = {
            post: "/v1/companies"
            body: "company"
        };
    }


    // Deletes a shelf, including all books that are stored on the shelf.
    rpc DeleteCompany(DeleteCompanyRequest) returns (google.protobuf.Empty) {
        // Client example - delete the second shelf:
        // curl -X DELETE http://DOMAIN_NAME/v1/companies/2
        option (google.api.http) = { delete: "/v1/companies/{company}" };
    }

    // Return a list of all jobs of a company
       rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
        // Define HTTP mapping
        // Client example (Assuming your service is hosted at the given 'DOMAIN_NAME'):
        // curl http://DOMAIN_NAME/v1/shelves
        option (google.api.http) = { get: "/v1/companies/{company}/jobs" };
    }
    // Creates a new shelf in the bookstore.
    rpc CreateJob(CreateJobRequest) returns (Job) {
        // Client example:
        // curl -d '{"theme": "Music"}' http://DOMAIN_NAME/v1/shelves
        option (google.api.http) = {
            post: "/v1/jobs"
            body: "job"
        };
    }
    // Returns a specific bookstore shelf.
    rpc GetJob(GetJobRequest) returns (Job) {
        // Client example - returns the first shelf:
        // curl http://DOMAIN_NAME/v1/shelves/1
        option (google.api.http) = { get : "/v1/jobs/{job}" };
    }
    // Deletes a shelf, including all books that are stored on the shelf.
    rpc DeleteJob(DeleteJobRequest) returns (google.protobuf.Empty) {
        // Client example - delete the second shelf:
        // curl -X DELETE http://DOMAIN_NAME/v1/shelves/2
        option (google.api.http) = { delete: "/v1/shelves/{job}" };
    }
    

}

message Job {
    // A job id
    int64 id = 1;
    string title = 2;
    string description = 3;
}

// A book resource
message Company {
    int64 id = 1;
    // A book tilte.
    string name = 3;
    
}

message ListCompaniesRequest {
    int32 page_size = 1 [(google.api.field_behavior) = OPTIONAL];
    string page_token = 2 [(google.api.field_behavior) = OPTIONAL];
}

// Response to ListShelves call.
message ListCompaniesResponse {
    // Shelves in the bookstore.
    repeated Company companies = 1;
    string page_token = 2;
}

message DeleteCompanyRequest {
    int64 company = 1;
}

// Response to ListShelves call.
message ListJobsRequest {
    // ID of the company which jobs to list.
    int64 company = 1;
    int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];
    string page_token = 3 [(google.api.field_behavior) = OPTIONAL];

}

// Response to ListShelves call.
message ListJobsResponse {
    // Shelves in the bookstore.
    repeated Job jobs = 1;
    string page_token = 2;
}

// Request message for CreateShelf method.
message CreateJobRequest {
    // The shelf resource to create
    Job job = 1 [(google.api.field_behavior) = REQUIRED];
}

// Request message for GetShelf method.
message GetJobRequest {
    // The ID of the self resource to retrieve.
    int64 job = 1;
}
// Request message for DeleteShelf method.
message DeleteJobRequest {
    // The ID of the self resource to delete.
    int64 job = 1;
}

// Request message for CreateBook method.
message CreateCompanyRequest {
    // The ID of the shelf on which to create a book.
    Company company = 1;
}


// Request message for CreateBook method.
message CreateCompanyResponse {
    // The ID of the shelf on which to create a book.
    Company company = 1;
}